New Feature: allow trigger and wait to get automation output in button Actions

--- a/packages/builder/src/components/design/PropertiesPanel/PropertyControls/ButtonActionEditor/manifest.json
+++ b/packages/builder/src/components/design/PropertiesPanel/PropertyControls/ButtonActionEditor/manifest.json
@@ -44,7 +44,13 @@
     },
     {
       "name": "Trigger Automation",
-      "component": "TriggerAutomation"
+      "component": "TriggerAutomation",
+      "context": [
+        {
+          "label": "Automation result",
+          "value": "result"
+        }
+      ]
     },
     {
       "name": "Update Field Value",
